2010-04-09  vadim  <vadim@vk.crocodile.org>

	* NATCompiler_ipt.cpp (AssignInterface::processNext): fixes #1403
	refs #1150  "Using ip address of wrong interface" is broken in v4.0.
	This effectively rolls back change r2437. With no "Interface" column
	in the NAT rules, it is difficult to build rules with arbitrary
	"-o" clause using address for SNAT that does not match interface
	of the firewall, or especially rules with address for SNAT that does
	match some inetrface but with another interface in "-o". Keeping old
	documented behavior where object in TSrc dictated this. If the object
	was a child of the firewall (an interface or address), then the rule
	was attached to the interface using "-o". If the object is not a child
	of the firewall, then the rule is attached to all interfaces using
	"-o eth+" but skips unnumbered interfaces. Column "interface" should
	be added to the NAT rules in the future to avoid these complications.

	* ProjectPanel_state_ops.cpp (ProjectPanel::saveState): fixed #1402
	GUI crashes on exit when no rules are opened in the ruleset panel view

	* ObjectTreeViewItem.cpp (ObjectTreeViewItem::data): fixed #1398
	bold font and "*" in the tree indicate firewalls that require
	installation but should indicate those that require recompile

2010-04-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* interfacePropertiesObjectFactory.cpp: fixed #1396, SF bug 2984193
	Vlan error when OpenWrt is selected as host

2010-04-08  vadim  <vadim@vk.crocodile.org>

	* CompilerDriver.cpp (CompilerDriver::copyFailoverInterface):
	see #1394  there is no need to add a copy of member interface objects
	to the cluster anymore.

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::_expand_interface):
	fixes #1394 Using existing virtual functions that expand multiple
	addresses to expand cluster interfaces. Added parameter bool
	expand_cluster_interfaces_fully to _expand_addr,
	_expand_addr_recursive and _expand_interface. Now expanding