@@ -1,5 +1,9 @@
 2010-04-09  vadim  <vadim@vk.crocodile.org>
 
+	* NATCompiler_pf.cpp (ReplaceFirewallObjectsODst::processNext):
+	fixes #1397   PF compiler fix: destination nat rule with fw object
+	in ODst should skip "on intf"
+
 	* NATCompiler_ipt.cpp (AssignInterface::processNext): fixes #1403
 	refs #1150  "Using ip address of wrong interface" is broken in v4.0.
 	This effectively rolls back change r2437. With no "Interface" column
